fix endpoints config, services, controller, etc...